Opened 7 years ago

Closed 7 years ago

#14279 closed bug (fixed)

BColumnListView: BSizeColumn sort doesn't work with big file

Reported by: Janus Owned by: Janus
Priority: normal Milestone: Unscheduled
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

BSizeColumn sort doesn't work with big files beacause the function CompareFields return an int. If the difference between the two fields is too big the value returned is meaningless.

Change History (1)

comment:1 by Janus, 7 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev52105.

Note: See TracTickets for help on using tickets.