BColumnListView: BSizeColumn sort with big files works as expected

- Use off_t to compute the difference
- Fixes #14279

Change-Id: I253f16bb75501904ff59ac603a4680c66cfec33f